welcome.lessons.welcome.summative.Moria.scala.code
  gauche();gauche();

var fini == false;

while(getCouleurSol()!=Color.GREEN && !fini){
  if(getX()==18){
    droite();
    avance();
    gauche();
    avance();
    fini = true;
  }else{
    avance();
    if(estSurBiscuit()){
      prendBiscuit();
      gauche();gauche();
      while(!estSurBiscuit()){
        avance();
      }
      recule();
      poseBiscuit();
      gauche();gauche();  
      avance();
    }
  }
}